--- a/css/styls.css
+++ b/css/styls.css
@@ -25,186 +25,313 @@ li {
 
 /* ########        INDEX    ######### */
 
+
+/* ###############       MOVILE     ################## */
+
 .grilla {
     background-color: rgb(255, 109, 80);
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: 1fr 3fr 1fr;
-    grid-template-areas:
-        "header"
-        "main"
-        "footer";
-}
-
-/* #########  HEADER   ######### */
-.header {
-    grid-area: header;
-    display: grid;
-    grid-template-columns: repeat(2 1fr);
-    grid-template-areas: "header-logo header-titulo";
 }
 
 .header-logo {
 
-    display: grid;
-    grid-area: header-logo;
+
     justify-content: center;
     align-items: center;
-
-
-
-
 }
 
 .header-titulo {
 
-    display: grid;
-    grid-area: header-titulo;
+    color: white;
     align-content: center;
     text-align: center;
+    padding: 20px;
 }
 
-
-/* #################   NAV   ##################### */
-
-
-
-
-/* ###################   MAIN   ############################# */
+/* ###########   MAIN   ##########*/
 
 
 .main {
     display: grid;
     grid-area: main;
     grid-template-rows: 10vh 1fr;
-
-
 }
 
 .flex-nav {
+
     grid-row: 1 2;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-
-
 }
+
 
 .main2 {
     grid-row: 2 3;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+
+    grid-template-rows: repeat(6, 1fr);
     gap: 10px;
     grid-template-areas:
-        "bienestar productos recetas"
-        "mermeladas muecas secos";
+        "bienestar"
+        " productos"
+        "recetas"
+        "mermeladas"
+        "muecas"
+        "secos";
 }
 
 .bienestar {
 
     background-color: rgb(166, 73, 253);
-    color: white;
     display: grid;
-    grid-column: 1, 2;
-    grid-row: 1, 2;
+    grid-area: bienestar;
+    color: white;
+    align-content: center;
+    text-align: center;
 }
 
 .productos {
     background-color: rgb(129, 194, 226);
-
-    color: white;
     display: grid;
-    grid-column: 2, 3;
-    grid-row: 1, 2;
-
+    grid-area: productos;
+    color: white;
+    align-content: center;
+    text-align: center;
 }
 
 .recetas {
     background-color: rgb(249, 170, 61);
-
-    color: white;
     display: grid;
-    grid-column: 3, 4;
-    grid-row: 1, 2;
+    grid-area: recetas;
+    color: white;
+    align-content: center;
+    text-align: center;
 }
 
 .mermeladas {
-    grid-column: 1, 2;
-    grid-row: 2 3;
-    justify-content: center;
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    gap: 20px;
+
 }
 
 .muecas {
-    grid-column: 2, 3;
-    grid-row: 2 3;
-    justify-content: center;
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    gap: 20px;
+
 }
 
 .secos {
-    grid-column: 3, 4;
-    grid-row: 2 3;
-    justify-content: center;
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    gap: 20px;
 }
 
 /* #######footer#### */
 .footer {
     grid-area: footer;
     display: grid;
-    grid-template-columns: repeat(3 1fr);
-    grid-template-areas: "mapa contacto pagos";
-}
+    grid-template-rows: repeat(3 1fr);
 
-.mapa {
-    grid-area: mapa;
-    display: grid;
-    justify-content: center;
-    align-content: center;
 }
 
 .contacto {
-    grid-area: contacto;
+
+    color: white;
+    grid-row: 1 2;
     display: grid;
     align-content: center;
     text-align: center;
+    padding: 10px;
 }
 
 .pagos {
-    grid-area: pagos;
+
+    color: white;
+    grid-row: 2 3;
     display: grid;
     align-content: center;
     text-align: center;
+    padding: 10px;
+}
+
+.mapa {
+
+    color: white;
+    grid-row: 3 4;
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    padding: 10px;
+}
+
+/* ############################################# ARTESANALES  #########################################*/
+
+.grillart {
+    background-color: rgb(82, 154, 255)
+}
+
+.header-art {
+    display: grid;
+    grid-area: header;
+    grid-template-columns: 1fr 2fr;
+    grid-template-areas: "header-logo  header-titulo";
+}
+
+
+.header-logo {
+    display: grid;
+    grid-area: header-logo;
+    justify-content: center;
+    align-content: center;
+
+}
+
+.header-titulo {
+    display: grid;
+    grid-area: header-titulo;
+    align-content: center;
+    text-align: center;
+}
+
+.main-art {
+    display: grid;
+    padding: 20px;
+    grid-template-rows: 1fr 1fr;
+    gap: 10px;
+    grid-template-areas: "artesanales"
+        "art-img"
+
+}
+
+.artesanales {
+    display: grid;
+    grid-area: artesanales;
+    color: white;
+    background-color: rgb(255, 109, 80);
+    align-content: center;
+    text-align: center;
+
+}
+
+.galletas-art {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding: 10px;
+
+}
+
+.pan-art {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding: 10px;
+
+}
+
+.mermeladas-art {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding: 10px;
+
+}
+
+/* #############################    RECETAS   #############################*/
+.grilla-receta{
+    background-color: rgb(246, 202, 209);
+}
+.titulo-receta{
+    color: black;
+}
+.main-recetas{
+    display: grid;
+    padding: 20px;
+    grid-template-rows: 1fr 1fr;
+    gap: 10px;
+    grid-template-areas: "rece-salu"
+        "receta-img"
+}
+.rece-salu{
+    display: grid;
+    grid-area: arrece-salu;
+    color: ;
+    background-color: ;
+    align-content: center;
+    text-align: center;
+
+}
+.croqueta{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+
+}
+.garbanzo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+.masa{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+.contacto-rece{
+    color: black;
+    grid-row: 2 3;
+    display: grid;
+    align-content: center;
+    text-align: center;
+    padding: 10px;
+}
+
+.pagos-rece{
+    color: black;
+    grid-row: 2 3;
+    display: grid;
+    align-content: center;
+    text-align: center;
+    padding: 10px;
+}
+.mapa-rece{
+    color:black;
+    grid-row: 3 4;
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    padding: 10px;
+
 }
 
 
 
 
 
-
-
-
-
-
-
-/*##########   MEDIA QUERI    ######### */
-
-
-
-@media (min-width: 700px) {
+/* ############################# NOTEBOOCK index  ################################################## */
+@media (min-width:630px) {
     .grilla {
+        background-color: rgb(255, 109, 80);
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 2fr 1fr;
         grid-template-areas:
             "header"
             "main"
             "footer";
     }
-
 
     .header {
         display: grid;
@@ -222,14 +349,13 @@ li {
     }
 
     .header-titulo {
+        color: white;
         font-size: 2vw;
         display: grid;
         grid-area: header-titulo;
         align-content: center;
         text-align: center;
     }
-
-
 
     .main {
 
@@ -244,44 +370,53 @@ li {
     }
 
     .flex-nav {
-
         grid-area: flex-nav;
-
         display: grid;
-
-        grid-template-rows: repeat(4, 1fr);
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(5, 1fr);
         grid-template-areas:
-            "secos"
+            "home"
+            "produc"
             "art"
-            "enva"
+            "recet"
             "natu";
-        justify-items: center;
-
-
     }
 
-    .secos {
+    .home {
         display: grid;
-        grid-area: secos;
+        grid-area: home;
+        justify-items: center;
+        align-content: center;
+    }
 
+    .produc {
+
+        display: grid;
+        grid-area: produc;
+        justify-items: center;
+        align-content: center;
 
     }
 
     .art {
         display: grid;
         grid-area: art;
-
+        justify-items: center;
+        align-content: center;
     }
 
-    .enva {
+    .recet {
         display: grid;
-        grid-area: enva;
+        grid-area: recet;
+        justify-items: center;
+        align-content: center;
     }
 
     .natu {
         display: grid;
         grid-area: natu;
-
+        justify-items: center;
+        align-content: center;
     }
 
 
@@ -300,17 +435,20 @@ li {
     .bienestar {
         grid-area: bienestar;
         background-color: rgb(166, 73, 253);
-        color: white;
         display: grid;
-
+        color: white;
+        align-content: center;
+        text-align: center;
     }
 
     .productos {
-        /* background-color: rgb(115, 235, 155); */
+
         background-color: rgb(129, 194, 226);
         color: white;
         grid-area: productos;
         display: grid;
+        align-content: center;
+        text-align: center;
 
 
     }
@@ -321,6 +459,8 @@ li {
         color: white;
         grid-area: recetas;
         display: grid;
+        align-content: center;
+        text-align: center;
 
     }
 
@@ -346,8 +486,6 @@ li {
 
     }
 
-
-
     .footer {
         grid-area: footer;
         display: grid;
@@ -355,81 +493,30 @@ li {
         grid-template-areas: "mapa contacto pagos";
     }
 
-    .mapa {
-        grid-area: mapa;
-        display: grid;
-        justify-content: center;
-        align-content: center;
+
+
+
+    /* #### noteboock artesanales##### */
+
+    .grillaart {
+        background-color: rgb(82, 154, 255)
     }
 
-    .contacto {
+    .header-titulo-art {
+
         color: white;
-        grid-area: contacto;
+        font-size: 2vw;
         display: grid;
+        grid-area: header-titulo;
         align-content: center;
         text-align: center;
     }
 
-    .pagos {
-        color: white;
-        grid-area: pagos;
+
+    .footer-art {
+        grid-area: footer;
         display: grid;
-        align-content: center;
-        text-align: center;
+        grid-template-columns: repeat(3 1fr);
+        grid-template-areas: "mapa contacto pagos";
     }
-
 }
-
-
-/* ###########     ARTESANALES     ####### */
-
-/* .grillart {
-    background-color:rgb(255, 109, 80) ;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-template-areas:
-        "header"
-        "main"
-        "footer";
-}
-
-.header {
-    grid-area: header;
-    display: grid;
-    grid-template-columns: repeat(2 1rf);
-    grid-template-areas: "header-logo header-titulo";
-}
-
-.header-logo {
-    display: grid;
-    grid-area: header-logo;
-    justify-content: center;
-    align-content: center;
-
-}
-
-.header-titulo {
-    display: grid;
-    grid-area: header-titulo;
-    align-content: center;
-    text-align: center;
-}
-
-.main {
-    display: grid;
-    grid-area: main;
-    grid-template-rows: 10vh 1fr;
-
-
-}
-
-.flex-nav {
-    grid-row: 1 2;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-
-
-} */
