--- a/css/styls.css
+++ b/css/styls.css
@@ -79,7 +79,26 @@ li {
         "muecas"
         "secos";
 }
+.galeria{
+  display: flex;
+  width: 600px;
+  height: 430px;
+}
+.galeria img{
+  width: 0;
+  flex-grow: 1;
+  object-fit: cover;
+  opacity: .8;
+  transition: 5s ease;
 
+}
+.galeria img:hover{
+  cursor: crosshair;
+  width: 300px;
+  opacity: 1;
+  filter: contrast(120%);
+
+}
 .bienestar {
 
     background-color: rgb(166, 73, 253);
