--- a/css/styls.css
+++ b/css/styls.css
@@ -1,732 +1,170 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-
-
-body {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-
-}
-
-a {
-    text-decoration: none;
-    color: white;
+ul {
+  list-style-type: none;
 }
 
 li {
-    list-style: none;
+  list-style-type: none;
+  list-style-position: none;
 }
 
-/* ####################### */
-
-
-
-/* ########        INDEX    ######### */
-
-
-/* ###############       MOVILE     ################## */
+a {
+  text-decoration: none;
+}
 
 .grilla {
-    background-color: rgb(255, 109, 80);
+  background-color: rgb(255, 109, 80);
 }
 
+.header {
+  display: block none;
+}
 .header-logo {
-
-
-    justify-content: center;
-    align-items: center;
+  display: grid;
 }
-
 .header-titulo {
-
-    color: white;
-    align-content: center;
-    text-align: center;
-    padding: 20px;
+  display: grid;
+  color: white;
+  align-content: center;
+  text-align: center;
+  padding: 20px;
 }
-
-/* ###########   MAIN   ##########*/
-
 
 .main {
-    display: grid;
-    grid-area: main;
-    grid-template-rows: 10vh 1fr;
+  display: grid;
+  grid-area: main;
+  grid-template-rows: 10vh 100rem;
 }
 
-.flex-nav {
-    grid-row: 1 2;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.main2 {
-    grid-row: 2 3;
-    display: grid;
-
-    grid-template-rows: repeat(6, 1fr);
-    gap: 10px;
-    grid-template-areas:
-        "bienestar"
-        " productos"
-        "recetas"
-        "mermeladas"
-        "muecas"
-        "secos";
-}
-.galeria{
+.menu {
+  grid-row: 1 2;
   display: flex;
-  width: 600px;
-  height: 430px;
-}
-.galeria img{
-  width: 0;
-  flex-grow: 1;
-  object-fit: cover;
-  opacity: .8;
-  transition: 5s ease;
-
-}
-.galeria img:hover{
-  cursor: crosshair;
-  width: 300px;
-  opacity: 1;
-  filter: contrast(120%);
-
-}
-.bienestar {
-
-    background-color: rgb(166, 73, 253);
-    display: grid;
-    grid-area: bienestar;
-    color: white;
-    align-content: center;
-    text-align: center;
+  flex-direction: row;
 }
 
-.productos {
-    background-color: rgb(129, 194, 226);
-    display: grid;
-    grid-area: productos;
-    color: white;
-    align-content: center;
-    text-align: center;
+.pilares {
+  grid-row: 2 3;
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  gap: 10px;
+  grid-template-areas: "bienestar" "productos" "recetas" "galeria";
+}
+.pilares-bienestar {
+  display: grid;
+  color: white;
+  align-content: center;
+  text-align: center;
+  background-color: rgb(166, 73, 253);
+  grid-area: bienestar;
+}
+.pilares-productos {
+  background-color: rgb(129, 194, 226);
+  grid-area: productos;
+  display: grid;
+  color: white;
+  align-content: center;
+  text-align: center;
+}
+.pilares-recetas {
+  background-color: rgb(249, 170, 61);
+  grid-area: recetas;
+  display: grid;
+  color: white;
+  align-content: center;
+  text-align: center;
+}
+.pilares-galeria {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
 }
 
-.recetas {
-    background-color: rgb(249, 170, 61);
-    display: grid;
-    grid-area: recetas;
-    color: white;
-    align-content: center;
-    text-align: center;
-}
-
-.mermeladas {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-
-}
-
-.muecas {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-
-}
-
-.secos {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-}
-
-/* #######footer#### */
 .footer {
-    grid-area: footer;
+  padding: 40px;
+  color: white;
+  display: grid;
+  align-content: center;
+  text-align: center;
+  padding: 30px;
+}
+.footer-contacto {
+  padding: 25px;
+}
+.footer-pago {
+  padding: 25px;
+}
+.footer-mapa {
+  padding: 25px;
+}
+
+@media (min-width: 630px) {
+  .grilla {
+    background-color: rgb(255, 109, 80);
     display: grid;
-    grid-template-rows: repeat(3 1fr);
-
-}
-
-.contacto {
-
-    color: white;
-    grid-row: 1 2;
-    display: grid;
-    align-content: center;
-    text-align: center;
-    padding: 10px;
-}
-
-.pagos {
-
-    color: white;
-    grid-row: 2 3;
-    display: grid;
-    align-content: center;
-    text-align: center;
-    padding: 10px;
-}
-
-.mapa {
-
-    color: white;
-    grid-row: 3 4;
-    display: grid;
-    justify-content: center;
-    align-content: center;
-    padding: 10px;
-}
-
-/* ############################################# ARTESANALES  #########################################*/
-
-.grillart {
-    background-color: rgb(82, 154, 255)
-}
-
-.header-art {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 2fr 1fr;
+    grid-template-areas: "header" "main" "footer";
+  }
+  .header {
     display: grid;
     grid-area: header;
-    grid-template-columns: 1fr 2fr;
-    grid-template-areas: "header-logo  header-titulo";
-}
-
-
-.header-logo {
+    grid-template-columns: 0.5fr 1.5fr;
+    grid-template-areas: "logo titulo";
+  }
+  .header-logo {
     display: grid;
-    grid-area: header-logo;
+    grid-area: logo;
     justify-content: center;
     align-content: center;
-
-}
-
-.header-titulo {
+  }
+  .header-titulo {
     display: grid;
-    grid-area: header-titulo;
+    grid-area: titulo;
     align-content: center;
     text-align: center;
-}
-
-.main-art {
-    display: grid;
-    padding: 20px;
-    grid-template-rows: 1fr 1fr;
-    gap: 10px;
-    grid-template-areas: "artesanales"
-        "art-img"
-
-}
-
-.artesanales {
-    display: grid;
-    grid-area: artesanales;
-    color: white;
-    background-color: rgb(255, 109, 80);
-    align-content: center;
-    text-align: center;
-
-}
-
-.galletas-art {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    padding: 10px;
-
-}
-
-.pan-art {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    padding: 10px;
-
-}
-
-.mermeladas-art {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    padding: 10px;
-
-}
-
-/* #############################    RECETAS   #############################*/
-.grilla-receta {
-    background-color: rgb(246, 202, 209);
-}
-
-
-
-.titulo-receta {
-    color: black;
-}
-
-.main-recetas {
-    display: grid;
-    padding: 20px;
-    grid-template-rows: 1fr 1fr;
-    gap: 10px;
-    grid-template-areas: "rece-salu"
-        "receta-img"
-}
-
-.rece-salu {
-    display: grid;
-    grid-area: arrece-salu;
-    align-content: center;
-    text-align: center;
-}
-
-.croqueta {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-
-}
-
-.garbanzo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-}
-
-.masa {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-}
-
-.contacto-rece {
-    color: black;
-    grid-row: 2 3;
-    display: grid;
-    align-content: center;
-    text-align: center;
-    padding: 10px;
-}
-
-.pagos-rece {
-    color: black;
-    grid-row: 2 3;
-    display: grid;
-    align-content: center;
-    text-align: center;
-    padding: 10px;
-}
-
-.mapa-rece {
-    color: black;
-    grid-row: 3 4;
-    display: grid;
-    justify-content: center;
-    align-content: center;
-    padding: 10px;
-
-}
-
-/* ######################    PRODUCTOS    ######################################## */
- 
-.grilla-producto {
-    background-color: rgb(39, 37, 37);
-}
-.flex-navproduc{
-
-    grid-row: 1 2;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-}
-.main-produc {
-    display: grid;
-    padding: 20px;
-    grid-template-rows: 1fr 1fr;
-    gap: 10px;
-    grid-template-areas: "lis-pro"
-        "listado"
-}
-
-.lis-pro {
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    padding: 30px;
-}
-
-.legumbres {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    padding: 10px;
-}
-
-.congelados {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    padding: 10px;
-}
-
-.cereales {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    padding: 10px;
-}
-
-.dulces {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    padding: 10px;
-}
-
-.varios {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    padding: 10px;
-} 
-
-/* ############### ######################   desayunos    ######################## */
-.grilla-desayuno {
-    background-color: rgb(196, 170, 220);
-}
-
-.titulo-dsayuno {
-    color: rgb(255, 109, 80);
-    align-content: center;
-    text-align: center;
-    padding: 30px;
-}
-
-
-p {
-    color: white;
-    align-content: center;
-    text-align: center;
-    padding: 30px;
-}
-
-.boxte {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    padding: 10px;
-}
-
-.caja-desa {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    padding: 10px;
-}
-
-.caja-tarje {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    padding: 10px;
-}
-
-.caja {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    padding: 10px;
-}
-
-
-
-
-
-
-
-
-
-/* ############################# NOTEBOOCK index  ################################################## */
-@media (min-width:630px) {
-    .grilla {
-        background-color: rgb(255, 109, 80);
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 2fr 1fr;
-        grid-template-areas:
-            "header"
-            "main"
-            "footer";
-    }
-
-    .header {
-        display: grid;
-        grid-area: header;
-        grid-template-columns: 1fr 2fr;
-        grid-template-areas: "header-logo  header-titulo";
-    }
-
-    .header-logo {
-
-        display: grid;
-        grid-area: header-logo;
-        justify-content: center;
-        align-content: center;
-    }
-
-    .header-titulo {
-        color: white;
-        font-size: 2vw;
-        display: grid;
-        grid-area: header-titulo;
-        align-content: center;
-        text-align: center;
-    }
-
-    .main {
-        display: grid;
-        grid-area: main;
-        grid-template-columns: 1fr 2fr;
-        grid-template-rows: 1fr;
-        grid-template-areas: "flex-nav main2";
-    }
-
-    .flex-nav {
-        grid-area: flex-nav;
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(5, 1fr);
-        grid-template-areas:
-            "home"
-            "produc"
-            "art"
-            "recet"
-            "natu";
-    }
-
-    .home {
-        display: grid;
-        grid-area: home;
-        justify-items: center;
-        align-content: center;
-    }
-
-    .produc {
-
-        display: grid;
-        grid-area: produc;
-        justify-items: center;
-        align-content: center;
-
-    }
-
-    .art {
-        display: grid;
-        grid-area: art;
-        justify-items: center;
-        align-content: center;
-    }
-
-    .recet {
-        display: grid;
-        grid-area: recet;
-        justify-items: center;
-        align-content: center;
-    }
-
-    .natu {
-        display: grid;
-        grid-area: natu;
-        justify-items: center;
-        align-content: center;
-    }
-
-
-    .main2 {
-
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        grid-area: main2;
-        gap: 10px;
-        grid-template-areas:
-            "bienestar productos recetas"
-            "mermeladas muecas secos";
-    }
-
-    .bienestar {
-        grid-area: bienestar;
-        background-color: rgb(166, 73, 253);
-        display: grid;
-        color: white;
-        align-content: center;
-        text-align: center;
-    }
-
-    .productos {
-
-        background-color: rgb(129, 194, 226);
-        color: white;
-        grid-area: productos;
-        display: grid;
-        align-content: center;
-        text-align: center;
-    }
-
-    .recetas {
-        background-color: rgb(249, 170, 61);
-
-        color: white;
-        grid-area: recetas;
-        display: grid;
-        align-content: center;
-        text-align: center;
-
-    }
-
-    .mermeladas {
-        display: grid;
-        grid-area: mermeladas;
-        justify-content: center;
-        align-content: center;
-    }
-
-    .muecas {
-        display: grid;
-        grid-area: muecas;
-        justify-content: center;
-        align-content: center;
-    }
-
-    .secos {
-        display: grid;
-        grid-area: secos;
-        justify-content: center;
-        align-content: center;
-
-    }
-
-    .footer {
-        grid-area: footer;
-        display: grid;
-        grid-template-columns: repeat(3 1fr);
-        grid-template-areas: "mapa contacto pagos";
-    }
-
-    /* ######################### noteboock artesanales   ######################## */
-
-    .grillaart {
-        background-color: rgb(82, 154, 255)
-    }
-
-    .header-titulo-art {
-
-        color: white;
-        font-size: 2vw;
-        display: grid;
-        grid-area: header-titulo;
-        align-content: center;
-        text-align: center;
-    }
-
-
-    .footer-art {
-        grid-area: footer;
-        display: grid;
-        grid-template-columns: repeat(3 1fr);
-        grid-template-areas: "mapa contacto pagos";
-    }
-    
-/* #############  PRODUCTOS NOTEBOOK ########### */
-.grilla-producto {
-    background-color: rgb(39, 37, 37);
-}
-
-.main-produc {
+    font-size: 2vw;
+  }
+  .main {
     display: grid;
     grid-area: main;
-    grid-template-columns: 20% 40% 40%;
-    grid-template-rows: 10% 30% 30% 30%;
-    grid-template-areas:
-        " lis-pro"
-        "flex-navprodu varios congelados"
-        "flex-navprodu cereales dulces"
-        "flex-navprodu legumbres"
-    ;
-}
-
-.flex-navproduc {
+    grid-template-columns: 0.3fr 1fr;
+    grid-template-rows: 0.7fr;
+    grid-template-areas: "menu pilares";
+  }
+  .menu {
+    display: flex;
+    justify-content: center;
+  }
+  .menu-home {
+    padding-bottom: 50%;
+  }
+  .menu-art {
+    padding-bottom: 50%;
+  }
+  .menu-produc {
+    padding-bottom: 50%;
+  }
+  .menu-recet {
+    padding-bottom: 50%;
+  }
+  .menu-natu {
+    padding-bottom: 50%;
+  }
+  .pilares {
     display: grid;
-    grid-area: flex-navprodu;
-}
-
-
-.lis-pro {
-    display: grid;
-    grid-area: lis-pro;
-    align-content: center;
+    grid-template-rows: repeat(4, 0.2fr);
+  }
+  .pilares-galeria {
+    max-width: 100%;
+    height: auto;
     text-align: center;
+  }
 }
 
-.varios {
-    display: grid;
-    grid-area: varios;
-    justify-content: center;
-        align-content: center;
-}
-
-.congelados {
-    display: grid;
-    grid-area: varios;
-    justify-content: center;
-        align-content: center;
-}
-
-.cereales {
-    display: grid;
-    grid-area: dulces;
-    justify-content: center;
-        align-content: center;
-}
-
-.legumbres {
-    display: grid;
-    grid-area: legumbres;
-    justify-content: center;
-        align-content: center;
-}
-
-
-/* #######################   NOTEBOOK DESAYUNO  ###################### */
-
-
-}
-
-
-
-
+/*# sourceMappingURL=styls.css.map */
