--- a/scss/piedepagina.scss
+++ b/scss/piedepagina.scss
@@ -1,7 +1,7 @@
-@mixin piededepagina {
+@mixin piedepagina {
     color: white;
     display: grid;
     align-content: center;
     text-align: center;
-    padding: 10px;
+    padding: 30px;
 }
