nuevos cambios en artesanales

--- a/scss/letras.scss
+++ b/scss/letras.scss
@@ -5,6 +5,7 @@
     align-content: center;
     text-align: center;
     padding: 20px;
+    font-family: Arial, sans-serif;
 }
 
 
@@ -13,5 +14,6 @@
     align-content: center;
     text-align: center;
     padding: 20px;
+    font-family: Arial, sans-serif;
 }
 // importacion-mixin- variable -parametro
