--- a/css/styls.css
+++ b/css/styls.css
@@ -33,6 +33,7 @@ a {
   align-content: center;
   text-align: center;
   padding: 20px;
+  font-family: Arial, sans-serif;
 }
 
 .main {
@@ -43,8 +44,14 @@ a {
 
 .menu {
   grid-row: 1 2;
+  justify-content: center;
+}
+
+.menu-lista {
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .pilares {
@@ -112,6 +119,46 @@ a {
   transform: scale(2);
 }
 
+.grillart {
+  background-color: rgb(82, 154, 255);
+}
+
+.header-artesanales {
+  display: block none;
+}
+.header-artesanales-logo-artesanales {
+  display: grid;
+}
+.header-artesanales-titulo-artesanales {
+  display: grid;
+  color: white;
+  align-content: center;
+  text-align: center;
+  padding: 20px;
+  font-family: Arial, sans-serif;
+}
+
+.main-artesanales {
+  display: grid;
+  grid-template-rows: 0.2fr repeat(2, 0.5fr);
+}
+
+.descripcion-artesanales {
+  display: grid;
+  color: white;
+  align-content: center;
+  text-align: center;
+  padding: 20px;
+  font-family: Arial, sans-serif;
+}
+
+.galeria {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
 @media (min-width: 630px) {
   .grilla {
     background-color: rgb(255, 109, 80);
@@ -124,8 +171,9 @@ a {
     display: grid;
     grid-area: header;
     grid-template-columns: 0.5fr 1.5fr;
-    height: 500px;
     grid-template-areas: "logo titulo";
+    height: auto;
+    padding: 10%;
   }
   .header-logo {
     display: grid;
@@ -136,8 +184,11 @@ a {
   .header-titulo {
     display: grid;
     grid-area: titulo;
+    color: white;
     align-content: center;
     text-align: center;
+    padding: 20px;
+    font-family: Arial, sans-serif;
     font-size: 2vw;
   }
   .main {
@@ -147,41 +198,40 @@ a {
     grid-template-rows: 0.7fr;
     grid-template-areas: "menu pilares";
   }
-  .menu {
+  .menu-lista {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    list-style: none;
+    padding: 0;
     display: flex;
     justify-content: center;
+    flex-direction: column;
   }
-  .menu-home {
+  .menu-lista li {
     padding-bottom: 50%;
+    background-color: #a1f79a;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    display: inline-block;
+    margin-right: 10px;
+    padding: 10px 20px;
+    color: white;
+    text-decoration: none;
+    transition: transform 0.3s;
+    color: #0e0d0d;
+    font-family: Arial, sans-serif;
   }
-  .menu-home:hover {
+  .menu-lista li:hover {
     transform: scale(1.2);
-  }
-  .menu-art {
-    padding-bottom: 50%;
-  }
-  .menu-art:hover {
-    transform: scale(1.2);
-  }
-  .menu-produc {
-    padding-bottom: 50%;
-  }
-  .menu-produc:hover {
-    transform: scale(1.2);
-  }
-  .menu-recet:hover {
-    transform: scale(1.2);
-  }
-  .menu-recet {
-    padding-bottom: 50%;
-  }
-  .menu-natu:hover {
-    transform: scale(1.2);
-  }
-  .menu-natu {
-    padding-bottom: 50%;
   }
   .pilares {
+    color: white;
+    align-content: center;
+    text-align: center;
+    padding: 20px;
+    font-family: Arial, sans-serif;
     display: grid;
     grid-template-rows: repeat(4, 0.2fr);
   }
@@ -219,6 +269,19 @@ a {
   }
   .footer-mapa:hover {
     transform: scale(2);
+  }
+  .grillart {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.5fr 0.5fr 0.5fr;
+    grid-template-areas: "header" "main" "footer";
+  }
+  .main-artesanales {
+    display: grid;
+    grid-area: main;
+    grid-template-columns: 0.3fr 1fr;
+    grid-template-areas: "menu contenido-artesanales";
+    grid-template-rows: none;
   }
 }
 
