--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,11 +17,13 @@ a {
     text-decoration: none;
 }
 
-
+@import "header";
 @import "color";
 @import "piedepagina";
 @import "letras";
 @import "pilares-basicos";
+@import "estilo-menu";
+@import "grilla";
 
 .grilla {
     background-color: rgb(255, 109, 80);
@@ -49,15 +51,12 @@ a {
 
 .menu {
     grid-row: 1 2;
-justify-content: center;
+    justify-content: center;
 }
 
 .menu-lista {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    
+    @include menu-lista-styls;
+
 }
 
 .pilares {
@@ -119,18 +118,46 @@ justify-content: center;
     }
 
     &-mapa:hover {
-        transform: scale(3.0);
+        transform: scale(2.0);
     }
 }
 
+// ARTESANALES.HTML 
+.grillart {
+
+    background-color: rgb(82, 154, 255)
+}
+.header-artesanales{
+    display: block none;
+
+    &-logo-artesanales {
+        display: grid;
+
+    }
+
+    &-titulo-artesanales {
+        display: grid;
+        @include letra-titulo-color(white);
+    }
+}
+
+.main-artesanales {
+    display: grid;
+    grid-template-rows: 0.2fr repeat(2, 0.5fr);
+
+}
+
+.descripcion-artesanales {
+    display: grid;
+    @include letra-titulo-color(white)
+}
+
+.galeria {
+    @include pilares-img-basico
+}
 
 
-
-
-
-
-
-
+// noteboock
 
 @media (min-width:630px) {
     .grilla {
@@ -146,11 +173,7 @@ justify-content: center;
     }
 
     .header {
-        display: grid;
-        grid-area: header;
-        grid-template-columns: 0.5fr 1.5fr;
-        height: 500px;
-        grid-template-areas: "logo titulo";
+        @include header;
 
         &-logo {
             display: grid;
@@ -162,8 +185,7 @@ justify-content: center;
         &-titulo {
             display: grid;
             grid-area: titulo;
-            align-content: center;
-            text-align: center;
+            @include letra-titulo-color(white);
             font-size: 2vw;
         }
 
@@ -182,56 +204,21 @@ justify-content: center;
 
     .menu {
 
-        display: flex;
-        justify-content: center;
 
-        &-home {
-            padding-bottom: 50%;
-        }
+        &-lista {
+            @include menu-styls;
+            @include menu-item-styles;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
 
-        &-home:hover {
-
-            transform: scale(1.2);
-
-        }
-
-        &-art {
-            padding-bottom: 50%;
-        }
-
-        &-art:hover {
-            transform: scale(1.2);
-
-        }
-
-        &-produc {
-            padding-bottom: 50%;
-        }
-
-        &-produc:hover {
-            transform: scale(1.2);
-        }
-
-        &-recet:hover {
-            transform: scale(1.2);
-        }
-
-        &-recet {
-            padding-bottom: 50%;
-        }
-
-        &-natu:hover {
-            transform: scale(1.2);
-        }
-
-        &-natu {
-            padding-bottom: 50%;
         }
 
 
     }
 
     .pilares {
+        @include letra-titulo;
         display: grid;
         grid-template-rows: repeat(4, 0.2fr);
 
@@ -271,11 +258,19 @@ justify-content: center;
         }
     }
 
+    // ARTESANALES.HTML 
 
-
-
-
-
-
+    .grillart {
+        
+         @include grilla-comun;
+    }
+    
+    .main-artesanales{
+        display: grid;
+        grid-area: main;
+        grid-template-columns:0.3fr 1fr; 
+        grid-template-areas: "menu contenido-artesanales";
+        grid-template-rows: none;
+    }
 
 }
