--- a/scss/grilla.scss
+++ b/scss/grilla.scss
@@ -1,7 +1,7 @@
 @mixin grilla-comun{
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 0.5fr 0.5fr 0.5fr;
+    grid-template-rows: auto;
     grid-template-areas:
         "header"
         "main"
